--- a/templates/autenticar/crearCuenta.html
+++ b/templates/autenticar/crearCuenta.html
@@ -254,19 +254,6 @@
     </div>
 
     <!-- Mainly scripts -->
-    <script src="js/jquery-3.1.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('.i-checks').iCheck({
-                checkboxClass: 'icheckbox_square-green',
-                radioClass: 'iradio_square-green',
-            });
-        });
-    </script>
-    <!-- Mainly scripts -->
     <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/plugins/metisMenu/jquery.metisMenu.js' %}"></script>
@@ -277,7 +264,7 @@
     <!-- Steps -->
     <script src="{% static 'js/plugins/steps/jquery.steps.min.js' %}"></script>
     <!-- iCheck -->
-    <script src="js/plugins/iCheck/icheck.min.js"></script>
+    <script src="{% static 'js/plugins/iCheck/icheck.min.js' %}"></script>
     <script>
       $(document).ready(function() {
         $('.i-checks').iCheck({
