--- a/templates/autenticar/login.html
+++ b/templates/autenticar/login.html
@@ -41,8 +41,8 @@
     </div>
   </div>
   <!-- Mainly scripts -->
-  <script src="js/jquery-3.1.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
+  <script src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </body>
 
 </html>
